examples/test/testpolicy15945.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15945
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key31: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value41
          key23: value29
          key10: value24
      podSelector:
        matchLabels:
          key27: value1
